# sagemaker_concept_shift_docs

./: .gitignore  README.md  pyproject.toml
notebooks/: Model Concept Drift Detection - NannyML - Algorithm.ipynb
notebooks/data/: synthetic_car_loan_analysis_with_targets.csv  synthetic_car_loan_analysis_with_targets_output.csv  synthetic_car_loan_rcs_output.csv
